--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "dev": "astro dev",
     "build": "astro build",
     "postbuild": "pagefind --site dist",
-    "format": "prettier -w ./src"
+    "format": "prettier -w ./src",
+    "docker:build": "docker build -t wcc-static .",
+    "docker:run": "docker run -p 8080:8080 wcc-static"
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.4",
